# lau-sia2-engine

./: .gitignore  AGENT.md  Cargo.toml  README.md
src/: banach.rs  conservation.rs  feedback.rs  fisher.rs  lib.rs  orchestrator.rs  pde.rs  renormalization.rs  spectral.rs  trajectory.rs
