[package]
name = "lau-sia2-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust engine for SIA² (Self-Improving AI with Spectral Architecture)"
license = "MIT"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
